# NetworkVisualizer

./: CMakeLists.txt  ColorLegend.qml  FileImage.qml  Main.qml  NetworkEdge.qml  NetworkVisualizer.qrc  NodeListView.qml  RoundNode.qml  customnetworkedge.cpp  customnetworkedge.h  customnetworkgraph.cpp  customnetworkgraph.h  customnetworknode.cpp  customnetworknode.h  customroundnode.cpp  customroundnode.h  graphData.json  graphmodel.cpp  graphmodel.h  main.cpp  nodewrapper.cpp  nodewrapper.h
Graphs/: binaryTree.json  boundingTest.json  fileSaveTest.json  forceTest.json  graphData.json  graphDrawTest.json  newSaveTest.json  starGraph.json
